{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 50,
  "lineage": "ba2b13ef-522e-2920-8027-d6113ca3af01",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c329d30125e764f4",
            "arn": "arn:aws:ec2:us-west-2:992382739086:elastic-ip/eipalloc-0c329d30125e764f4",
            "association_id": "eipassoc-0c898544cedfff907",
            "domain": "vpc",
            "id": "eipalloc-0c329d30125e764f4",
            "network_border_group": "us-west-2",
            "network_interface": "eni-0adf6d5c2f1ff80b8",
            "private_dns": "ip-10-10-1-21.us-west-2.compute.internal",
            "private_ip": "10.10.1.21",
            "public_dns": "ec2-44-254-192-81.us-west-2.compute.amazonaws.com",
            "public_ip": "44.254.192.81",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "cicd-dashboard-nat-eip-1"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "cicd-dashboard-nat-eip-1",
              "Project": "cicd-health-dashboard"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ac350e4dfeefff79",
            "arn": "arn:aws:ec2:us-west-2:992382739086:elastic-ip/eipalloc-0ac350e4dfeefff79",
            "association_id": "eipassoc-0f685b004a244b4b9",
            "domain": "vpc",
            "id": "eipalloc-0ac350e4dfeefff79",
            "network_border_group": "us-west-2",
            "network_interface": "eni-0c6444c1f8bbcff1c",
            "private_dns": "ip-10-10-2-7.us-west-2.compute.internal",
            "private_ip": "10.10.2.7",
            "public_dns": "ec2-54-188-145-82.us-west-2.compute.amazonaws.com",
            "public_ip": "54.188.145.82",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "cicd-dashboard-nat-eip-2"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "cicd-dashboard-nat-eip-2",
              "Project": "cicd-health-dashboard"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "private_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-024e4b8b6ef78434a",
            "arn": "arn:aws:ec2:us-west-2:992382739086:instance/i-03bc44d316ff8e593",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "cicd-dashboard-ec2-profile",
            "id": "i-03bc44d316ff8e593",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "cicd-dashboard-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c72d72b318dc797e",
            "private_dns": "ip-10-10-3-20.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.3.20",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-west-2:992382739086:key/a1729cc5-f6d2-4dd6-a850-dce0003ca3a0",
                "tags_all": {
                  "Environment": "production",
                  "ManagedBy": "terraform",
                  "Project": "cicd-health-dashboard"
                },
                "throughput": 125,
                "volume_id": "vol-0a41870bdcb2aaf2e",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-078d3ce84347a816b",
            "tags": {
              "Name": "cicd-dashboard-private-ec2-1",
              "Type": "database"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "cicd-dashboard-private-ec2-1",
              "Project": "cicd-health-dashboard",
              "Type": "database"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ef6582fbbe546ab8"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "dependencies": [
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ec2_role",
            "aws_key_pair.main",
            "aws_security_group.private_ec2",
            "aws_security_group.public_ec2",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux",
            "data.aws_availability_zones.available",
            "random_password.mongodb_password"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "public_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-024e4b8b6ef78434a",
            "arn": "arn:aws:ec2:us-west-2:992382739086:instance/i-096683e8c3a983aab",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "cicd-dashboard-ec2-profile",
            "id": "i-096683e8c3a983aab",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "cicd-dashboard-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0912965e941c01db0",
            "private_dns": "ip-10-10-1-12.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.1.12",
            "public_dns": "ec2-35-91-185-198.us-west-2.compute.amazonaws.com",
            "public_ip": "35.91.185.198",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-west-2:992382739086:key/a1729cc5-f6d2-4dd6-a850-dce0003ca3a0",
                "tags_all": {
                  "Environment": "production",
                  "ManagedBy": "terraform",
                  "Project": "cicd-health-dashboard"
                },
                "throughput": 125,
                "volume_id": "vol-09c48c9bbfc355cf5",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b1062c9e3ff67e39",
            "tags": {
              "Name": "cicd-dashboard-public-ec2-1",
              "Type": "frontend-backend"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "cicd-dashboard-public-ec2-1",
              "Project": "cicd-health-dashboard",
              "Type": "frontend-backend"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-029ef64165bfe2510"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "dependencies": [
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ec2_role",
            "aws_instance.private_ec2",
            "aws_key_pair.main",
            "aws_security_group.private_ec2",
            "aws_security_group.public_ec2",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux",
            "data.aws_availability_zones.available",
            "random_password.mongodb_password"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-024e4b8b6ef78434a",
            "arn": "arn:aws:ec2:us-west-2:992382739086:instance/i-022974bab7e4e9037",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "cicd-dashboard-ec2-profile",
            "id": "i-022974bab7e4e9037",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "cicd-dashboard-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c5a8df331b03423d",
            "private_dns": "ip-10-10-2-22.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.2.22",
            "public_dns": "ec2-54-189-181-78.us-west-2.compute.amazonaws.com",
            "public_ip": "54.189.181.78",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-west-2:992382739086:key/a1729cc5-f6d2-4dd6-a850-dce0003ca3a0",
                "tags_all": {
                  "Environment": "production",
                  "ManagedBy": "terraform",
                  "Project": "cicd-health-dashboard"
                },
                "throughput": 125,
                "volume_id": "vol-0e72dfe84475da042",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0309c8d16a5f0ad00",
            "tags": {
              "Name": "cicd-dashboard-public-ec2-2",
              "Type": "frontend-backend"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "cicd-dashboard-public-ec2-2",
              "Project": "cicd-health-dashboard",
              "Type": "frontend-backend"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-029ef64165bfe2510"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "dependencies": [
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ec2_role",
            "aws_instance.private_ec2",
            "aws_key_pair.main",
            "aws_security_group.private_ec2",
            "aws_security_group.public_ec2",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux",
            "data.aws_availability_zones.available",
            "random_password.mongodb_password"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:992382739086:internet-gateway/igw-0411ca856ff44a80a",
            "id": "igw-0411ca856ff44a80a",
            "owner_id": "992382739086",
            "tags": {
              "Name": "cicd-dashboard-igw"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "cicd-dashboard-igw",
              "Project": "cicd-health-dashboard"
            },
            "vpc_id": "vpc-097ce6276838ce936"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:992382739086:loadbalancer/app/cicd-dashboard-alb/da97ce1d8039e611",
            "arn_suffix": "app/cicd-dashboard-alb/da97ce1d8039e611",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "cicd-dashboard-alb-1791559228.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-west-2:992382739086:loadbalancer/app/cicd-dashboard-alb/da97ce1d8039e611",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "cicd-dashboard-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-093288311262e574a"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0309c8d16a5f0ad00"
              },
              {
                "subnet_id": "subnet-0b1062c9e3ff67e39"
              }
            ],
            "subnets": [
              "subnet-0309c8d16a5f0ad00",
              "subnet-0b1062c9e3ff67e39"
            ],
            "tags": {
              "Name": "cicd-dashboard-alb"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "cicd-dashboard-alb",
              "Project": "cicd-health-dashboard"
            },
            "vpc_id": "vpc-097ce6276838ce936",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:992382739086:listener/app/cicd-dashboard-alb/da97ce1d8039e611/797a0c81aa4d7dc0",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:992382739086:targetgroup/cicd-dashboard-frontend-tg/3ec8efff13147819",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:992382739086:listener/app/cicd-dashboard-alb/da97ce1d8039e611/797a0c81aa4d7dc0",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:992382739086:loadbalancer/app/cicd-dashboard-alb/da97ce1d8039e611",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Project": "cicd-health-dashboard"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.main",
            "aws_lb_target_group.frontend",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:992382739086:listener/app/cicd-dashboard-alb/da97ce1d8039e611/12233f4be681e4c2",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:992382739086:targetgroup/cicd-dashboard-jenkins-tg/6965ee548c89d918",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:992382739086:listener/app/cicd-dashboard-alb/da97ce1d8039e611/12233f4be681e4c2",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:992382739086:loadbalancer/app/cicd-dashboard-alb/da97ce1d8039e611",
            "mutual_authentication": [],
            "port": 8080,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Project": "cicd-health-dashboard"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.main",
            "aws_lb_target_group.jenkins",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:992382739086:targetgroup/cicd-dashboard-backend-tg/f4490264f83766f0",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:992382739086:listener-rule/app/cicd-dashboard-alb/da97ce1d8039e611/797a0c81aa4d7dc0/55e8c315874a2615",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:992382739086:listener-rule/app/cicd-dashboard-alb/da97ce1d8039e611/797a0c81aa4d7dc0/55e8c315874a2615",
            "listener_arn": "arn:aws:elasticloadbalancing:us-west-2:992382739086:listener/app/cicd-dashboard-alb/da97ce1d8039e611/797a0c81aa4d7dc0",
            "priority": 100,
            "tags": {},
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Project": "cicd-health-dashboard"
            }
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.main",
            "aws_lb_listener.frontend",
            "aws_lb_target_group.backend",
            "aws_lb_target_group.frontend",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:992382739086:targetgroup/cicd-dashboard-backend-tg/f4490264f83766f0",
            "arn_suffix": "targetgroup/cicd-dashboard-backend-tg/f4490264f83766f0",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:992382739086:targetgroup/cicd-dashboard-backend-tg/f4490264f83766f0",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-west-2:992382739086:loadbalancer/app/cicd-dashboard-alb/da97ce1d8039e611"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "cicd-dashboard-backend-tg",
            "port": 5001,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "cicd-dashboard-backend-tg"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "cicd-dashboard-backend-tg",
              "Project": "cicd-health-dashboard"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-097ce6276838ce936"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:992382739086:targetgroup/cicd-dashboard-frontend-tg/3ec8efff13147819",
            "arn_suffix": "targetgroup/cicd-dashboard-frontend-tg/3ec8efff13147819",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:992382739086:targetgroup/cicd-dashboard-frontend-tg/3ec8efff13147819",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-west-2:992382739086:loadbalancer/app/cicd-dashboard-alb/da97ce1d8039e611"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "cicd-dashboard-frontend-tg",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "cicd-dashboard-frontend-tg"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "cicd-dashboard-frontend-tg",
              "Project": "cicd-health-dashboard"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-097ce6276838ce936"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:992382739086:targetgroup/cicd-dashboard-jenkins-tg/6965ee548c89d918",
            "arn_suffix": "targetgroup/cicd-dashboard-jenkins-tg/6965ee548c89d918",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/login",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:992382739086:targetgroup/cicd-dashboard-jenkins-tg/6965ee548c89d918",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-west-2:992382739086:loadbalancer/app/cicd-dashboard-alb/da97ce1d8039e611"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "cicd-dashboard-jenkins-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "cicd-dashboard-jenkins-tg"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "cicd-dashboard-jenkins-tg",
              "Project": "cicd-health-dashboard"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-097ce6276838ce936"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-2:992382739086:targetgroup/cicd-dashboard-backend-tg/f4490264f83766f0-20250919035143802000000008",
            "port": 5001,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:992382739086:targetgroup/cicd-dashboard-backend-tg/f4490264f83766f0",
            "target_id": "i-096683e8c3a983aab"
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ec2_role",
            "aws_instance.private_ec2",
            "aws_instance.public_ec2",
            "aws_key_pair.main",
            "aws_lb_target_group.backend",
            "aws_security_group.private_ec2",
            "aws_security_group.public_ec2",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux",
            "data.aws_availability_zones.available",
            "random_password.mongodb_password"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-2:992382739086:targetgroup/cicd-dashboard-backend-tg/f4490264f83766f0-20250919035143987200000009",
            "port": 5001,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:992382739086:targetgroup/cicd-dashboard-backend-tg/f4490264f83766f0",
            "target_id": "i-022974bab7e4e9037"
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ec2_role",
            "aws_instance.private_ec2",
            "aws_instance.public_ec2",
            "aws_key_pair.main",
            "aws_lb_target_group.backend",
            "aws_security_group.private_ec2",
            "aws_security_group.public_ec2",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux",
            "data.aws_availability_zones.available",
            "random_password.mongodb_password"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-2:992382739086:targetgroup/cicd-dashboard-frontend-tg/3ec8efff13147819-20250919035143501400000005",
            "port": 3000,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:992382739086:targetgroup/cicd-dashboard-frontend-tg/3ec8efff13147819",
            "target_id": "i-096683e8c3a983aab"
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ec2_role",
            "aws_instance.private_ec2",
            "aws_instance.public_ec2",
            "aws_key_pair.main",
            "aws_lb_target_group.frontend",
            "aws_security_group.private_ec2",
            "aws_security_group.public_ec2",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux",
            "data.aws_availability_zones.available",
            "random_password.mongodb_password"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-2:992382739086:targetgroup/cicd-dashboard-frontend-tg/3ec8efff13147819-20250919035143452000000004",
            "port": 3000,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:992382739086:targetgroup/cicd-dashboard-frontend-tg/3ec8efff13147819",
            "target_id": "i-022974bab7e4e9037"
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ec2_role",
            "aws_instance.private_ec2",
            "aws_instance.public_ec2",
            "aws_key_pair.main",
            "aws_lb_target_group.frontend",
            "aws_security_group.private_ec2",
            "aws_security_group.public_ec2",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux",
            "data.aws_availability_zones.available",
            "random_password.mongodb_password"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-2:992382739086:targetgroup/cicd-dashboard-jenkins-tg/6965ee548c89d918-20250919035143751700000006",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:992382739086:targetgroup/cicd-dashboard-jenkins-tg/6965ee548c89d918",
            "target_id": "i-096683e8c3a983aab"
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ec2_role",
            "aws_instance.private_ec2",
            "aws_instance.public_ec2",
            "aws_key_pair.main",
            "aws_lb_target_group.jenkins",
            "aws_security_group.private_ec2",
            "aws_security_group.public_ec2",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux",
            "data.aws_availability_zones.available",
            "random_password.mongodb_password"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-2:992382739086:targetgroup/cicd-dashboard-jenkins-tg/6965ee548c89d918-20250919035143766700000007",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:992382739086:targetgroup/cicd-dashboard-jenkins-tg/6965ee548c89d918",
            "target_id": "i-022974bab7e4e9037"
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ec2_role",
            "aws_instance.private_ec2",
            "aws_instance.public_ec2",
            "aws_key_pair.main",
            "aws_lb_target_group.jenkins",
            "aws_security_group.private_ec2",
            "aws_security_group.public_ec2",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux",
            "data.aws_availability_zones.available",
            "random_password.mongodb_password"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c329d30125e764f4",
            "association_id": "eipassoc-0c898544cedfff907",
            "connectivity_type": "public",
            "id": "nat-06d77bfc75604dc91",
            "network_interface_id": "eni-0adf6d5c2f1ff80b8",
            "private_ip": "10.10.1.21",
            "public_ip": "44.254.192.81",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0b1062c9e3ff67e39",
            "tags": {
              "Name": "cicd-dashboard-nat-gateway-1"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "cicd-dashboard-nat-gateway-1",
              "Project": "cicd-health-dashboard"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ac350e4dfeefff79",
            "association_id": "eipassoc-0f685b004a244b4b9",
            "connectivity_type": "public",
            "id": "nat-079f74aaa9e964c23",
            "network_interface_id": "eni-0c6444c1f8bbcff1c",
            "private_ip": "10.10.2.7",
            "public_ip": "54.188.145.82",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0309c8d16a5f0ad00",
            "tags": {
              "Name": "cicd-dashboard-nat-gateway-2"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "cicd-dashboard-nat-gateway-2",
              "Project": "cicd-health-dashboard"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:992382739086:route-table/rtb-09efe50df208fa850",
            "id": "rtb-09efe50df208fa850",
            "owner_id": "992382739086",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-06d77bfc75604dc91",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "cicd-dashboard-private-rt-1"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "cicd-dashboard-private-rt-1",
              "Project": "cicd-health-dashboard"
            },
            "timeouts": null,
            "vpc_id": "vpc-097ce6276838ce936"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:992382739086:route-table/rtb-0578ea118ba093028",
            "id": "rtb-0578ea118ba093028",
            "owner_id": "992382739086",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-079f74aaa9e964c23",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "cicd-dashboard-private-rt-2"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "cicd-dashboard-private-rt-2",
              "Project": "cicd-health-dashboard"
            },
            "timeouts": null,
            "vpc_id": "vpc-097ce6276838ce936"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:992382739086:route-table/rtb-0a40a531fc76147d9",
            "id": "rtb-0a40a531fc76147d9",
            "owner_id": "992382739086",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0411ca856ff44a80a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "cicd-dashboard-public-rt"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "cicd-dashboard-public-rt",
              "Project": "cicd-health-dashboard"
            },
            "timeouts": null,
            "vpc_id": "vpc-097ce6276838ce936"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0373015f5607c6347",
            "route_table_id": "rtb-09efe50df208fa850",
            "subnet_id": "subnet-078d3ce84347a816b"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0422d4dcb8487ba6b",
            "route_table_id": "rtb-0578ea118ba093028",
            "subnet_id": "subnet-09152200c02ba3e01"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c521ae6965419c7c",
            "route_table_id": "rtb-0a40a531fc76147d9",
            "subnet_id": "subnet-0b1062c9e3ff67e39"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00f69e2c8549760b5",
            "route_table_id": "rtb-0a40a531fc76147d9",
            "subnet_id": "subnet-0309c8d16a5f0ad00"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:992382739086:security-group/sg-093288311262e574a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-093288311262e574a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "cicd-dashboard-alb-20250919034256561500000001",
            "name_prefix": "cicd-dashboard-alb-",
            "owner_id": "992382739086",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cicd-dashboard-alb-sg"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "cicd-dashboard-alb-sg",
              "Project": "cicd-health-dashboard"
            },
            "timeouts": null,
            "vpc_id": "vpc-097ce6276838ce936"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:992382739086:security-group/sg-0ef6582fbbe546ab8",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ef6582fbbe546ab8",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-029ef64165bfe2510"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 27017,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-029ef64165bfe2510"
                ],
                "self": false,
                "to_port": 27017
              }
            ],
            "name": "cicd-dashboard-private-ec2-20250919034302766700000004",
            "name_prefix": "cicd-dashboard-private-ec2-",
            "owner_id": "992382739086",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cicd-dashboard-private-ec2-sg"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "cicd-dashboard-private-ec2-sg",
              "Project": "cicd-health-dashboard"
            },
            "timeouts": null,
            "vpc_id": "vpc-097ce6276838ce936"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.public_ec2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:992382739086:security-group/sg-029ef64165bfe2510",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-029ef64165bfe2510",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 50000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 50000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5001,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5001
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "cicd-dashboard-public-ec2-20250919034256574700000002",
            "name_prefix": "cicd-dashboard-public-ec2-",
            "owner_id": "992382739086",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cicd-dashboard-public-ec2-sg"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "cicd-dashboard-public-ec2-sg",
              "Project": "cicd-health-dashboard"
            },
            "timeouts": null,
            "vpc_id": "vpc-097ce6276838ce936"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:992382739086:subnet/subnet-078d3ce84347a816b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.10.3.0/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-078d3ce84347a816b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "992382739086",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cicd-dashboard-private-subnet-1",
              "Type": "private"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "cicd-dashboard-private-subnet-1",
              "Project": "cicd-health-dashboard",
              "Type": "private"
            },
            "vpc_id": "vpc-097ce6276838ce936"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:992382739086:subnet/subnet-09152200c02ba3e01",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.10.4.0/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09152200c02ba3e01",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "992382739086",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cicd-dashboard-private-subnet-2",
              "Type": "private"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "cicd-dashboard-private-subnet-2",
              "Project": "cicd-health-dashboard",
              "Type": "private"
            },
            "vpc_id": "vpc-097ce6276838ce936"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:992382739086:subnet/subnet-0b1062c9e3ff67e39",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.10.1.0/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b1062c9e3ff67e39",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "992382739086",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cicd-dashboard-public-subnet-1",
              "Type": "public"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "cicd-dashboard-public-subnet-1",
              "Project": "cicd-health-dashboard",
              "Type": "public"
            },
            "vpc_id": "vpc-097ce6276838ce936"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:992382739086:subnet/subnet-0309c8d16a5f0ad00",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.10.2.0/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0309c8d16a5f0ad00",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "992382739086",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cicd-dashboard-public-subnet-2",
              "Type": "public"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "cicd-dashboard-public-subnet-2",
              "Project": "cicd-health-dashboard",
              "Type": "public"
            },
            "vpc_id": "vpc-097ce6276838ce936"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:992382739086:vpc/vpc-097ce6276838ce936",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0c052054b0844b6b0",
            "default_route_table_id": "rtb-0b5e38705a59e7a7b",
            "default_security_group_id": "sg-07aeb680cf1328d74",
            "dhcp_options_id": "dopt-0816c0b295eed3b68",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-097ce6276838ce936",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b5e38705a59e7a7b",
            "owner_id": "992382739086",
            "tags": {
              "Name": "cicd-dashboard-vpc"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "cicd-dashboard-vpc",
              "Project": "cicd-health-dashboard"
            }
          }
        }
      ]
    }
  ]
}